--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
     background-color: var(--Lightgray);
 }
 
+.cards-container {
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+}
+
 .main-container {
     background-color: var(--White);
     width: 320px;
@@ -24,6 +30,14 @@ body {
     margin: 60px auto;
     border-radius: 16px;
     padding: 16px;
+    transition: 300ms;
+}
+
+.main-container:hover {
+    cursor: pointer;
+    box-shadow: 10px  10px 10px;
+    transition: 300ms;
+    margin-top: 50px;
 }
 
 .img-container {
@@ -33,6 +47,7 @@ body {
     background-size: cover;
     border-radius: 16px;
     margin-bottom: 24px;
+    animation: UpCenter 500ms none;
 }
 
 h1 {
@@ -41,6 +56,7 @@ h1 {
     text-align: center;
     margin: 0 15px;
     margin-bottom: 24px;
+    animation: leftCenter 500ms none;
 }
 
 p {
@@ -48,6 +64,7 @@ p {
     color: var(--Grayishblue);
     text-align: center;
     margin: 0 15px;
+    animation: rightCenter 500ms none;
 }
 
 .footer { 
@@ -57,3 +74,33 @@ p {
 .footer a { 
     color: hsl(228, 45%, 44%); 
 }
+
+/* Animaciones */
+
+@keyframes UpCenter {
+    0% {
+        transform: translateY(-500px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
+@keyframes leftCenter {
+    0%{
+        transform: translateX(-500px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+@keyframes rightCenter {
+    0%{
+        transform: translateX(500px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
